manifests/umami/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
  labels:
    app.kubernetes.io/part-of: webdevofreality
